Support build number prefixes
Add `build_number_prefix` support to `source` so that `check` can
return a subset of build numbers.

Closes gh-110